--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/loader_iocn.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <title>Digital Ad Mastery Bootcamp</title>
+    <title>Vite + React</title>
   </head>
   <body>
     <div id="root"></div>
